Add redis for cache, and added Serialization.