@@ -7,6 +7,7 @@ import dev.kush.spotifyyoutubesyncbackend.entities.Scope;
 import dev.kush.spotifyyoutubesyncbackend.services.oauth2.OAuth2Service;
 import dev.kush.spotifyyoutubesyncbackend.services.uri.UriBuilderService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -17,7 +18,6 @@ import java.util.stream.Collectors;
 public class UriBuilderServiceImpl implements UriBuilderService {
 
     private final OAuth2Service oAuth2Service;
-
 
     @Override
     public String getSpotifyUri() {
@@ -47,15 +47,15 @@ public class UriBuilderServiceImpl implements UriBuilderService {
     public String getYoutubeUri() {
         var allOAuth2Infos = oAuth2Service.getAllInfoFromAppName(ProjectConstants.YOUTUBE_APP_NAME);
 
-        return allOAuth2Infos.get(0).oAuth2Apps().getAuthTokenUrl() + "?"
+        return allOAuth2Infos.getFirst().oAuth2Apps().getAuthTokenUrl() + "?"
                 + ProjectConstants.YOUTUBE_PARAMETER_SCOPE_NAME
                 + "=" + getScope(allOAuth2Infos) + "&"
                 + ProjectConstants.YOUTUBE_PARAMETER_RESPONSE_TYPE_NAME
                 + "=" + ProjectConstants.YOUTUBE_RESPONSE_TYPE_VALUE + "&"
                 + ProjectConstants.YOUTUBE_PARAMETER_CLIENT_ID_NAME
-                + "=" + allOAuth2Infos.get(0).client().getClientId() + "&"
+                + "=" + allOAuth2Infos.getFirst().client().getClientId() + "&"
                 + ProjectConstants.YOUTUBE_PARAMETER_REDIRECT_URI_NAME
-                + "=" + allOAuth2Infos.get(0).redirectUri().getRedirectUri() + "&"
+                + "=" + allOAuth2Infos.getFirst().redirectUri().getRedirectUri() + "&"
                 + ProjectConstants.YOUTUBE_PARAMETER_ACCESS_TYPE_NAME
                 + "=" + ProjectConstants.YOUTUBE_ACCESS_TYPE_VALUE;
     }
